tests/compile-fail/integration__integration__strings__compile_string_arg_too_big_gt.snap
---
source: tests/integration/strings.rs
expression: stderr
---
error: string argument too large for buffer
   ┌─ <input>:11:11
   │
11 │     fixed("abcdefghi");
   │           ^^^^^^^^^^^ requires 10 bytes
   │
   = this argument is written to a 8-byte buffer


